--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=jalabank
+spring.application.name=newbank
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/newbank
 spring.datasource.username=postgres
-spring.datasource.password=elefante10
+spring.datasource.password=SUASENHAAQUI
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.jpa.show-sql=false
