refactoring all project

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.application.name=jalabank
+spring.application.name=newbank
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/jalabanktest
 spring.datasource.username=postgres
